# rules_idea

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AUTHORS  BUILD.bazel  CONTRIBUTING.md  README.md  README.md.json  WORKSPACE  internal_deps.bzl
.github/: CODEOWNERS
.github/workflows/: bazel.yml  ci.yaml  idea_UI_2021_2_4.yaml  idea_UI_2021_3_3.yaml  idea_UI_2022_1_4.yaml  idea_UI_2022_2_4.yaml  release.yml  workspace_snippet.sh
docs/: BUILD.bazel
examples/test/: .bazelrc  BUILD.bazel  WORKSPACE  run_indexing.sh
examples/test/.devcontainer/: Dockerfile  devcontainer.json
examples/test/bar/: BUILD.bazel  Bar.java
examples/test/baz/: BUILD.bazel  Baz.java
examples/test/common/: BUILD.bazel  Common.java
examples/test/foo/: BUILD.bazel  Foo.java
gradleproject/: README.md  build.gradle.kts
idea/: BUILD  BUILD.bazel  extras.bzl  idea.bzl  repositories.bzl  toolchain.bzl
idea/foo/: BUILD.bazel  foo.bzl
idea/internal/: BUILD  idea_autoconfiguration.bzl  providers.bzl
idea/private/: BUILD.bazel  toolchains_repo.bzl
idea/tests/: versions_test.bzl
intellij/: BUILD.bazel  defs.bzl  deps_repositories.bzl  deps_toolchains.bzl  indexing.bzl  intellij.bzl  intellij_project.bzl  intellij_toolchain.bzl  plugin.bzl  predefined.bzl  repositories.bzl  run.bzl  run_intellij.bzl  toolchains.bzl
intellij/internal/: utils.bzl
intellij/internal/intellij_compiler_link/: intellij_compiler_link.bzl
intellij/internal/intellij_defs/: intellij_defs.bzl  intellij_indexing.bzl  intellij_kt_toolchain.bzl  intellij_run.bzl
intellij/internal/intellij_plugin/: intellij_plugin.bzl
intellij/internal/intellij_repo/: intellij_repo.bzl  intellij_repo_libs.bzl  intellij_repo_plugins.bzl
intellij/internal/intellij_toolchain/: BUILD.bazel  intellij_toolchain.bzl  plugins_directory.bzl  run_intellij.bzl  run_intellij.sh.tp
intellij/internal/misc/: BUILD.bazel  grpc_kotlin.patch  maven_install.json  run_intellij.sh.tp
intellij/private/: BUILD.bazel
src/java/rules_intellij/worker/: BUILD.bazel  DebugLogger.java  IndexingWorker.java  IntellijIndexingPersistentClient.java
src/kotlin/rules_intellij/indexing/: BUILD.bazel  OnDiskSharedIndexChunkLocator.java  PersistentProjectIndexesGenerator.kt
src/main/cpp/ide_with_plugin_runner/: BUILD.bazel  ide_with_plugin_runner.cpp.tp
src/main/cpp/intellij_runner/: BUILD.bazel  intellij_runner.cpp.tp
src/main/java/rules_intellij/domain_socket/: BUILD.bazel  NettyDomainSocketChannelBuilder.java  NettyDomainSocketServerBuilder.java
src/main/java/rules_intellij/unzip_plugin/: BUILD.bazel  UnzipPlugin.java
src/main/java/rules_intellij/worker/: BUILD.bazel  IntellijIndexingPersistentClient.java
src/main/kotlin/rules_intellij/domain_socket/: BUILD.bazel  domain_socket.kt
src/main/kotlin/rules_intellij/indexing/: BUILD.bazel  Hui.java  IndexingService.kt  OnDiskSharedIndexChunkLocator.java  OnDiskSharedIndexChunkLocator.kt  PersistentProjectIndexesGenerator.kt  PredefinedJsonSharedIndexLocalFinder.kt  SharedIndexLocalFinder.kt  dummies.kt  dummy_warmup.kt  indexing_plugin.bzl  utils.kt
src/main/kotlin/rules_intellij/worker/: BUILD.bazel  IndexingWorker.kt  IndexingWorkerArgs.kt  IntellijIndexingClient.kt  WorkerLogger.kt
src/main/proto/: BUILD.bazel
src/proto/: BUILD.bazel  indexingPersistentMediator.proto
tools/: BUILD
