load("@rules_intellij//intellij:intellij_toolchain.bzl", "setup_intellij_toolchain")
load("@rules_intellij//intellij:intellij_project.bzl", "setup_intellij_project")
load("@rules_intellij//intellij:indexing.bzl", "generate_indexes")
load("@rules_intellij//intellij:run_intellij.bzl", "run_intellij")

setup_intellij_toolchain(
    name = "ide",
    ide_repo = "idea_ultimate",
    plugins = {
        "ijwb": "@bazel_2022.02.23.0.0-api-version-212//file",
    },
)

setup_intellij_project(
    name = "project",
    # project_dir = ".ijwb", <-- default
)

generate_indexes(
    name = "indexes",
    deps = [
        "//foo",
        "//bar",
        "//baz",
    ],
)

run_intellij(
    name = "idea_run",
    jvm_props = { "idea.platform.prefix": "Idea" },
    indexes = ":indexes"
)