load("@rules_intellij//intellij:intellij_project.bzl", "setup_intellij_project")
load("@rules_intellij//intellij:indexing.bzl", "generate_indexes")


setup_intellij_project(
    name = "project",
    project_dir = ".ijwb",
)

generate_indexes(
    name = "indexes",
    deps = [
        "//foo",
        "//bar",
        "//baz",
    ],
)