load("@rules_intellij//intellij:intellij_project.bzl", "setup_intellij_project")
load("@rules_intellij//intellij:indexing.bzl", "generate_indexes")
load("@rules_intellij//intellij:run.bzl", "run_intellij")


setup_intellij_project(
    name = "project",
    project_dir = ".ijwb",
)

generate_indexes(
    name = "indexes",
    deps = [
        "//foo",
        "//bar",
        "//baz",
    ],
    tags = [ "no-cache" ],
)

run_intellij(name = "run")