load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "indexing_mediator_proto",
    srcs = ["indexingPersistentMediator.proto"],
    deps = [],
)

java_proto_library(
    name = "indexing_mediator_java_proto",
    visibility = ["//visibility:public"],
    deps = [":indexing_mediator_proto"],
)

java_grpc_library(
    name = "indexing_mediator_grpc_proto",
    srcs = [":indexing_mediator_proto"],
    visibility = ["//visibility:public"],
    deps = [":indexing_mediator_java_proto"],
)
