load("@rules_java//java:defs.bzl", "java_library")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "indexing",
    srcs = glob([
        "*.kt",
        "*.java",
    ]),
    deps = [
        "//src/proto:indexing_mediator_java_proto",
        "//src/proto:indexing_mediator_java_grpc_proto",

        "//src/proto:indexing_mediator_kt_proto",
        "//src/proto:indexing_mediator_kt_grpc_proto",

        "@idea_ultimate//:libs",
        "@idea_ultimate//plugins:indexing-shared-ultimate",
        "@idea_ultimate//plugins:indexing-shared",

        "@com_beust_jcommander//jar",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@com_google_api_grpc_proto_google_common_protos//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_code_gson_gson//jar",
        "@com_google_guava_guava//jar",
    ]
)