load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "domain_socket",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//api",

        "@rules_intellij_maven//:io_netty_netty_transport_native_unix_common",
        "@rules_intellij_maven//:io_netty_netty_transport_classes_epoll",
        "@rules_intellij_maven//:io_netty_netty_transport_native_epoll",
        "@rules_intellij_maven//:io_netty_netty_transport_classes_kqueue",
        "@rules_intellij_maven//:io_netty_netty_transport_native_kqueue",
    ] + select({
        "@bazel_tools//src/conditions:linux_x86_64": [
            "@io_netty_netty_transport_native_epoll_linux_x86_64//jar",
        ],
        "@bazel_tools//src/conditions:linux_aarch64": [
            "@io_netty_netty_transport_native_epoll_linux_aarch_64//jar",
        ],
        "@bazel_tools//src/conditions:darwin_x86_64": [
            "@io_netty_netty_transport_native_kqueue_osx_x86_64//jar",
        ],
        "@bazel_tools//src/conditions:darwin_arm64": [
            "@io_netty_netty_transport_native_kqueue_osx_aarch_64//jar",
        ],
        "//conditions:default": [],
    }),
)