load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "domain_socket",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@io_grpc_grpc_java//netty",

        "@io_netty_netty_transport_native_unix_common//jar",
        "@io_netty_netty_transport_native_epoll//jar",
        "@io_netty_netty_transport_native_kqueue//jar",
    ] + select({
        "@bazel_tools//src/conditions:linux_x86_64": [
#            "@io_netty_netty_transport_native_unix_common_linux_x86_64//jar",
            "@io_netty_netty_transport_native_epoll_linux_x86_64//jar",
        ],
        "@bazel_tools//src/conditions:linux_aarch64": [
#            "@io_netty_netty_transport_native_unix_common_linux_aarch_64//jar",
            "@io_netty_netty_transport_native_epoll_linux_aarch_64//jar",
        ],
        "@bazel_tools//src/conditions:darwin_x86_64": [
#            "@io_netty_netty_transport_native_unix_common_osx_x86_64//jar",
            "@io_netty_netty_transport_native_kqueue_osx_x86_64//jar",
        ],
        "@bazel_tools//src/conditions:darwin_arm64": [
#            "@io_netty_netty_transport_native_unix_common_osx_aarch_64//jar",
            "@io_netty_netty_transport_native_kqueue_osx_aarch_64//jar",
        ],
        "//conditions:default": [],
    }),
)